# unsaged

./: .dockerignore  .env.local.example  .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  GenerationScript.sql  LICENSE  Makefile  README.md  UpgradeScript.sql  docker-compose.yml  docker.env  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tailwind.config.js  tsconfig.json  turbo.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  docker-image.yml  playwright.yml  release.yml  (+1 more)
app/: layout.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/lib/: secrets.rs
apps/desktop/src-tauri/src/lib/services/anthropic/: stream.rs
apps/desktop/src-tauri/src/lib/services/azure/: stream.rs  token_counter.rs
apps/desktop/src-tauri/src/lib/services/google/: stream.rs
apps/desktop/src-tauri/src/lib/services/ollama/: models.rs  stream.rs
apps/desktop/src-tauri/src/lib/services/openai/: stream.rs  token_counter.rs
apps/desktop/src-tauri/src/lib/utils/: logging.rs
apps/desktop/src-tauri/src/models/: ai_models.rs  conversations.rs
docs/: README.md  package.json  tailwind.config.ts
pages/: _app.tsx  _document.tsx  index.tsx
services/: useApiService.ts
styles/: globals.css
supabase/: config.toml
types/: ai-models.ts  chat.ts  database.ts  export.ts  settings.ts
(+721 files in other folders)
