[package]
name = "unsaged"
version = "0.1.0"
description = "Advandced LLM Dashboard"
authors = ["Jorge Menjivar"]
license = "Apache-2.0"
repository = "https://github.com/jorge-menjivar/unsaged"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [ "updater", "http-all", "shell-open"] }
keyring = "2.1.0"
log = "0.4.20"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tiktoken-rs = "0.5.7"
reqwest = { version = "0.11.22", features = ["json"] }
tokio= { version = "1.35.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "io"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
future-utils = "0.12.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
